--- a/react/01-github-explorer/package.json
+++ b/react/01-github-explorer/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn webpack serve"
+  },
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
