--- a/react/01-github-explorer/package.json
+++ b/react/01-github-explorer/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn webpack serve"
+    "start": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
     "html-webpack-plugin": "^5.5.0",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "cross-env": "^7.0.3",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
