--- a/react/01-github-explorer/package.json
+++ b/react/01-github-explorer/package.json
@@ -19,6 +19,8 @@
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.5.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
