--- a/react/01-github-explorer/package.json
+++ b/react/01-github-explorer/package.json
@@ -20,6 +20,8 @@
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
